Fix BackgroundPattern compatibility with dark mode

--- a/ui/seznam.cz-2021/blocks/backgroundPattern.css
+++ b/ui/seznam.cz-2021/blocks/backgroundPattern.css
@@ -4,4 +4,6 @@
 
   background: repeat center center transparent;
   background-size: 100px 100px;
+
+  opacity: 0.15;
 }
